vcluster_versioned_docs/version-0.37.0/_partials/config/controlPlane/advanced.mdx

<details className="config-field" data-expandable="true">
<summary>

## `advanced` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#advanced}

Advanced holds additional configuration for the vCluster control plane.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

### `defaultImageRegistry` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#advanced-defaultImageRegistry}

DefaultImageRegistry will be used as a prefix for all internal images deployed by vCluster or Helm. This makes it easy to
upload all required vCluster images to a single private repository and set this value. Workload images are not affected by this.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

### `virtualScheduler` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#advanced-virtualScheduler}

VirtualScheduler defines if a scheduler should be used within the virtual cluster or the scheduling decision for workloads will be made by the host cluster.
Deprecated: Use ControlPlane.Distro.K8S.Scheduler instead.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default">false</span> <span className="config-field-enum"></span> {#advanced-virtualScheduler-enabled}

Enabled defines if this option should be enabled.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `serviceAccount` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#advanced-serviceAccount}

ServiceAccount specifies options for the vCluster control plane service account.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#advanced-serviceAccount-enabled}

Enabled specifies if the service account should get deployed.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `name` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#advanced-serviceAccount-name}

Name specifies what name to use for the service account.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `imagePullSecrets` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#advanced-serviceAccount-imagePullSecrets}

ImagePullSecrets defines extra image pull secrets for the service account.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#advanced-serviceAccount-imagePullSecrets-name}

Name of the image pull secret to use.

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `annotations` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> {#advanced-serviceAccount-annotations}

Annotations are extra annotations for this resource.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `labels` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> {#advanced-serviceAccount-labels}

Labels are extra labels for this resource.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `workloadServiceAccount` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#advanced-workloadServiceAccount}

WorkloadServiceAccount specifies options for the service account that will be used for the workloads that run within the virtual cluster.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#advanced-workloadServiceAccount-enabled}

Enabled specifies if the service account for the workloads should get deployed.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `name` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#advanced-workloadServiceAccount-name}

Name specifies what name to use for the service account for the virtual cluster workloads.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `imagePullSecrets` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#advanced-workloadServiceAccount-imagePullSecrets}

ImagePullSecrets defines extra image pull secrets for the workload service account.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#advanced-workloadServiceAccount-imagePullSecrets-name}

Name of the image pull secret to use.

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `annotations` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> {#advanced-workloadServiceAccount-annotations}

Annotations are extra annotations for this resource.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `labels` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> {#advanced-workloadServiceAccount-labels}

Labels are extra labels for this resource.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `headlessService` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#advanced-headlessService}

HeadlessService specifies options for the headless service used for the vCluster StatefulSet.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `annotations` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> {#advanced-headlessService-annotations}

Annotations are extra annotations for this resource.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `labels` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> {#advanced-headlessService-labels}

Labels are extra labels for this resource.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `konnectivity` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#advanced-konnectivity}

Konnectivity holds dedicated konnectivity configuration. This is only available when privateNodes.enabled is true.

</summary>




<details className="config-field" data-expandable="true">
<summary>

#### `server` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#advanced-konnectivity-server}

Server holds configuration for the konnectivity server.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#advanced-konnectivity-server-enabled}

Enabled defines if the konnectivity server should be enabled.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `extraArgs` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string[]</span> <span className="config-field-default">&#91;&#93;</span> <span className="config-field-enum"></span> {#advanced-konnectivity-server-extraArgs}

ExtraArgs are additional arguments to pass to the konnectivity server.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `agent` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#advanced-konnectivity-agent}

Agent holds configuration for the konnectivity agent.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#advanced-konnectivity-agent-enabled}

Enabled defines if the konnectivity agent should be enabled.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `replicas` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">integer</span> <span className="config-field-default">1</span> <span className="config-field-enum"></span> {#advanced-konnectivity-agent-replicas}

Replicas is the number of replicas for the konnectivity agent.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `image` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#advanced-konnectivity-agent-image}

Image is the image for the konnectivity agent.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `imagePullPolicy` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#advanced-konnectivity-agent-imagePullPolicy}

ImagePullPolicy is the policy how to pull the image.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `nodeSelector` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> {#advanced-konnectivity-agent-nodeSelector}

NodeSelector is the node selector for the konnectivity agent.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `priorityClassName` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#advanced-konnectivity-agent-priorityClassName}

PriorityClassName is the priority class name for the konnectivity agent.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `tolerations` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object[]</span> <span className="config-field-default">&#91;&#93;</span> <span className="config-field-enum"></span> {#advanced-konnectivity-agent-tolerations}

Tolerations is the tolerations for the konnectivity agent.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `extraEnv` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object[]</span> <span className="config-field-default">&#91;&#93;</span> <span className="config-field-enum"></span> {#advanced-konnectivity-agent-extraEnv}

ExtraEnv is the extra environment variables for the konnectivity agent.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `extraArgs` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string[]</span> <span className="config-field-default">&#91;&#93;</span> <span className="config-field-enum"></span> {#advanced-konnectivity-agent-extraArgs}

ExtraArgs are additional arguments to pass to the konnectivity agent.

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `registry` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#advanced-registry}

Registry allows enabling an embedded docker image registry in vCluster. This is useful for air-gapped environments or when you don't have a public registry available to distribute images.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default">false</span> <span className="config-field-enum"></span> {#advanced-registry-enabled}

Enabled defines if the embedded registry should be enabled.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `anonymousPull` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#advanced-registry-anonymousPull}

AnonymousPull allows enabling anonymous pull for the embedded registry. This allows anybody to pull images from the registry without authentication.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `config` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> {#advanced-registry-config}

Config is the regular docker registry config. See https://distribution.github.io/distribution/about/configuration/ for more details.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `cloudControllerManager` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#advanced-cloudControllerManager}

CloudControllerManager holds configuration for the embedded cloud controller manager. This is only available when private nodes are enabled.
The cloud controller manager is responsible for setting the node's ip addresses as well as the provider id for the node and other node metadata.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#advanced-cloudControllerManager-enabled}

Enabled defines if the embedded cloud controller manager should be enabled. This defaults to true, but can be disabled if you want to use
an external cloud controller manager such as AWS or GCP. The cloud controller manager is responsible for setting the node's ip addresses as well
as the provider id for the node and other node metadata.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `kubeOvn` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#advanced-cloudControllerManager-kubeOvn}

KubeOvn holds configuration for the kube-ovn integration of the embedded cloud controller manager. When enabled, services of
type LoadBalancer are translated into kube-ovn RouterLBRule and OvnEip resources in the host cluster.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#advanced-cloudControllerManager-kubeOvn-enabled}

Enabled defines if the kube-ovn integration of the embedded cloud controller manager should be enabled. This requires kube-ovn to be
deployed in the host cluster and private nodes to be enabled.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `vpc` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#advanced-cloudControllerManager-kubeOvn-vpc}

VPC is the name of the kube-ovn VPC that the integration operates on. It is shared by loadBalancers and podRoutes.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `loadBalancers` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#advanced-cloudControllerManager-kubeOvn-loadBalancers}

LoadBalancers holds configuration for translating services of type LoadBalancer into kube-ovn resources in the host cluster.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `externalSubnet` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#advanced-cloudControllerManager-kubeOvn-loadBalancers-externalSubnet}

ExternalSubnet is the name of the kube-ovn subnet that the load balancer VIPs are allocated from.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `backendSubnet` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#advanced-cloudControllerManager-kubeOvn-loadBalancers-backendSubnet}

BackendSubnet is the name of a kube-ovn subnet in the load balancer's VPC. It is stamped as the
generated Service's ovn.kubernetes.io/logical_switch so kube-ovn places the VIP on the VPC's
load balancer; the value only needs to be a real subnet in that VPC.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `podRoutes` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#advanced-cloudControllerManager-kubeOvn-podRoutes}

PodRoutes creates routes for the nodes' podCIDRs in the VPC, which enables direct routing for LoadBalancers.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#advanced-cloudControllerManager-kubeOvn-podRoutes-enabled}

Enabled selects direct-to-pod mode, preserving the client source IP.

</summary>



</details>


</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `globalMetadata` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#advanced-globalMetadata}

GlobalMetadata is metadata that will be added to all resources deployed by Helm.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `annotations` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> {#advanced-globalMetadata-annotations}

Annotations are extra annotations for this resource.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `kubeVip` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#advanced-kubeVip}

KubeVip holds configuration for embedded kube-vip that announces the virtual cluster endpoint IP on layer 2.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default">false</span> <span className="config-field-enum"></span> {#advanced-kubeVip-enabled}

Enabled defines if embedded kube-vip should be enabled.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `interface` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#advanced-kubeVip-interface}

Interface is the network interface on which the VIP is announced.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `gateway` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#advanced-kubeVip-gateway}

Gateway is the gateway address in CIDR notation (e.g., 10.100.0.1/24).
This is used to configure policy-based routing for the VIP and must include the subnet prefix.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `podDisruptionBudget` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#advanced-podDisruptionBudget}

PodDisruptionBudget limits how many pods of an application can be voluntarily disrupted at once
to ensure availability during maintenance or scaling operations.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default">false</span> <span className="config-field-enum"></span> {#advanced-podDisruptionBudget-enabled}

Enabled defines if the pod disruption budget should be enabled.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `minAvailable` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#advanced-podDisruptionBudget-minAvailable}

MinAvailable describes the minimal number or percentage of available pods.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `maxUnavailable` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#advanced-podDisruptionBudget-maxUnavailable}

MaxUnavailable describes the minimal number or percentage of unavailable pods.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `unhealthyPodEvictionPolicy` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#advanced-podDisruptionBudget-unhealthyPodEvictionPolicy}

UnhealthyPodEvictionPolicy defines the criteria when unhealthy pods should be considered for eviction.
Currently supported values are:
* IfHealthyBudget - pods that are in the Running phase but not yet healthy are considered disrupted
	and may be evicted even if the PodDisruptionBudget criteria are not met.
* AlwaysAllow - pods that are in the Running phase but not yet healthy are considered disrupted
	and can be evicted regardless of whether the criteria in a PDB is met.

</summary>



</details>


</details>


</details>
